--- a/ansible/playbooks/deploy-victoria-metrics.yaml
+++ b/ansible/playbooks/deploy-victoria-metrics.yaml
@@ -16,7 +16,7 @@
       kubernetes.core.helm:
         name: victoria-metrics
         chart_ref: oci://ghcr.io/victoriametrics/helm-charts/victoria-metrics-cluster
-        chart_version: "0.31.0"
+        chart_version: 0.31.0
         release_namespace: victoria-metrics
         create_namespace: true
         wait: true
