--- a/ansible/playbooks/deploy-github-runner.yaml
+++ b/ansible/playbooks/deploy-github-runner.yaml
@@ -31,7 +31,7 @@
         name: arc
         chart_ref: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
         chart_version: 0.13.1
-        release_namespace: "arc-runners"
+        release_namespace: arc-runners
         create_namespace: true
         wait: true
         timeout: 5m
@@ -41,7 +41,7 @@
         name: arc-runner-set
         chart_ref: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set
         chart_version: 0.13.1
-        release_namespace: "arc-runners"
+        release_namespace: arc-runners
         create_namespace: true
         wait: true
         timeout: 5m
