--- a/ansible/playbooks/bootstrap-k3s.yaml
+++ b/ansible/playbooks/bootstrap-k3s.yaml
@@ -82,7 +82,7 @@
         dest: /etc/rancher/k3s/config.yaml.d/99-cpu-manager.yaml
         content: |
           kubelet-arg:
-            - "cpu-manager-policy=static"
+            - cpu-manager-policy=static
             - "system-reserved=cpu={{ reserved_cpu_m }}m"
         mode: 0644
       notify: Restart K3s
